--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ The goal of `jofou.lib` is to regroup all the functions that are useful for me t
 
 ## Installation
 
-You can install the released version of hr.churn from [CRAN](https://CRAN.R-project.org) with:
+You can install the lastest version of jofou.lib with:
 
 ``` r
 devtools::install_github("jofou/jofou.lib")
